# esp32-tests

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  export.sh  sdkconfig  sdkconfig.defaults
components/arithmetics/: CMakeLists.txt  arithmetics.c
components/arithmetics/inc/: arithmetics.h
components/arithmetics/test/: CMakeLists.txt  test_arithmetics.c
components/core/aircomm/: CMakeLists.txt
components/core/aircomm/modules/: aircomm.c
components/core/aircomm/modules/inc/: aircomm.h
main/: CMakeLists.txt  idf_component.yml  main.c
scripts/: flash_image.sh
test/: CMakeLists.txt
test/main/: CMakeLists.txt
